--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,23 @@
     package="com.example.gswe4645.savingstateapp" >
 
     <application
+        android:name="ctec.savingstateapplication.model.AndroidSaveState"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".FrontActivity"
+            android:name="controller.FrontActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="controller.BackPage"
+            android:label="@string/title_activity_back_page" >
         </activity>
     </application>
 
